--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router": "^2.0.0"
+    "react-router-dom": "^4.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.23.1",
