--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.15.3",
+    "css-loader": "^0.27.3",
+    "file-loader": "^0.10.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router-dom": "^4.0.0"
+    "react-router-dom": "^4.0.0",
+    "style-loader": "^0.15.0"
   },
   "devDependencies": {
     "babel-core": "^6.23.1",
